# engine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Data/shaders/: base.vert
include/: Common.hpp  Entity.hpp  GameWindow.hpp
include/Components/: RenderComponent.hpp  ShaderComponent.hpp  ShapeComponent.hpp
include/Rendering/: GameWindow.hpp  RenderComponent.hpp  Shader.hpp  ShapeComponent.hpp
include/System/: EntitySystem.hpp
include/glad/: glad.h
src/: Common.cpp  GameWindow.cpp  glad.c
src/Components/: RenderComponent.cpp  ShaderComponent.cpp  ShapeComponent.cpp
src/Rendering/: GameWindow.cpp  Shader.cpp  ShapeComponent.cpp
src/System/: EntitySystem.cpp
src/System.cpp/: EntitySystem.cpp  RenderingSystem.cpp
